standards/incremental/code/c/src/v2.0/gnds/BindingEnergy.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// BindingEnergy is the basic handle type in this file. Example:
//    // Create a default BindingEnergy object:
//    BindingEnergy handle = BindingEnergyDefault();
// Functions involving BindingEnergy are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_CODE_V2_0_GNDS_BINDINGENERGY
#define C_INTERFACE_CODE_V2_0_GNDS_BINDINGENERGY

#include "GNDStk.h"
#include "v2.0/gnds/Double.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct BindingEnergyClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ BindingEnergy
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct BindingEnergyClass *BindingEnergy;

// --- Const-aware handles.
typedef const struct BindingEnergyClass *const ConstHandle2ConstBindingEnergy;
typedef       struct BindingEnergyClass *const ConstHandle2BindingEnergy;
typedef const struct BindingEnergyClass *      Handle2ConstBindingEnergy;
typedef       struct BindingEnergyClass *      Handle2BindingEnergy;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstBindingEnergy
BindingEnergyDefaultConst();

// +++ Create, default
extern_c Handle2BindingEnergy
BindingEnergyDefault();

// --- Create, general, const
extern_c Handle2ConstBindingEnergy
BindingEnergyCreateConst(
   ConstHandle2ConstDouble Double
);

// +++ Create, general
extern_c Handle2BindingEnergy
BindingEnergyCreate(
   ConstHandle2ConstDouble Double
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
BindingEnergyAssign(ConstHandle2BindingEnergy self, ConstHandle2ConstBindingEnergy from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
BindingEnergyDelete(ConstHandle2ConstBindingEnergy self);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
BindingEnergyRead(ConstHandle2BindingEnergy self, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
BindingEnergyWrite(ConstHandle2ConstBindingEnergy self, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
BindingEnergyPrint(ConstHandle2ConstBindingEnergy self);

// +++ Print to standard output, as XML
extern_c int
BindingEnergyPrintXML(ConstHandle2ConstBindingEnergy self);

// +++ Print to standard output, as JSON
extern_c int
BindingEnergyPrintJSON(ConstHandle2ConstBindingEnergy self);


// -----------------------------------------------------------------------------
// Child: Double
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
BindingEnergyDoubleHas(ConstHandle2ConstBindingEnergy self);

// --- Get, const
extern_c Handle2ConstDouble
BindingEnergyDoubleGetConst(ConstHandle2ConstBindingEnergy self);

// +++ Get, non-const
extern_c Handle2Double
BindingEnergyDoubleGet(ConstHandle2BindingEnergy self);

// +++ Set
extern_c void
BindingEnergyDoubleSet(ConstHandle2BindingEnergy self, ConstHandle2ConstDouble Double);


// -----------------------------------------------------------------------------
// Custom functionality
// -----------------------------------------------------------------------------

#include "v2.0/gnds/BindingEnergy/src/custom.h"

#undef extern_c
#endif